<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Feature Voting</string>
    
    <!-- Login Screen -->
    <string name="login_title">Feature Voting Platform</string>
    <string name="email_hint">Enter your email</string>
    <string name="password_hint">Enter your password</string>
    <string name="login_button">Login</string>
    <string name="login_error">Invalid credentials</string>
    <string name="login_loading">Logging in...</string>
    
    <!-- Main Screen -->
    <string name="features_title">Features</string>
    <string name="create_feature">Create Feature</string>
    <string name="logout">Logout</string>
    <string name="vote">Vote</string>
    <string name="unvote">Unvote</string>
    <string name="votes_count">%d votes</string>
    
    <!-- Create Feature Screen -->
    <string name="create_feature_title">Create New Feature</string>
    <string name="feature_title_hint">Feature Title</string>
    <string name="feature_description_hint">Feature Description</string>
    <string name="create_button">Create</string>
    <string name="cancel_button">Cancel</string>
    
    <!-- General -->
    <string name="loading">Loading...</string>
    <string name="error">Error occurred</string>
    <string name="network_error">Network error. Please check your connection.</string>
    <string name="created_by">Created by: %s</string>
</resources>